--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CV - Rifat Rahvali</title>
+    <title>CV - RIFAT RAHVALI</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
@@ -119,11 +119,11 @@
                             <b>Kurumsal IT Yapısı</b>
                         </p>
                         <p class="card-text">
-                            <b>Network</b> | Kurulum & Yönetim <br>
+                            <b>Network</b> | Kurulum & Yönetim & Destek <br>
                             <small class="text-muted">Forti - Juniper </small>
                         </p>
                         <p class="card-text">
-                            <b>Sistem</b> | Kurulum & Yönetim <br>
+                            <b>Sistem</b> | Kurulum & Yönetim & Destek<br>
                             <small class="text-muted">Active Directory - File Server - Domain </small>
                         </p>
                         <p class="card-text">
