--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CV - RIFAT RAHVALI</title>
+    <title>CV - Rifat Rahvali</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
@@ -12,23 +12,23 @@
 
 <body>
     <div class="container">
-        <div class="header">
+        <div class="header text-center my-3">
             <h1>rahvali</h1>
             <h2>#dev</h2>
         </div>
-        <div class="line"></div>
+        <div class="line mb-3"></div>
         <div class="row">
 
             <section class="col-md-4 text-center">
-                <div class="" style="width: 18rem; border-radius: 0; border: 2px solid black;">
-                    <img src="profil.png" alt="Rifat Rahvali" class="profile-pic">
+                <div class="card mb-3" style="width: 100%; border-radius: 0; border: 2px solid black;">
+                    <img src="profil.png" alt="Rifat Rahvali" class="card-img-top profile-pic">
                     <div class="card-body">
-                        <h4 class="card-title"><b>RIFAT RAHVALI</b></h>
-                            <p class="card-text">Bilgisayar Mühendisi</p>
+                        <h4 class="card-title"><b>RIFAT RAHVALI</b></h4>
+                        <p class="card-text">Bilgisayar Mühendisi</p>
                     </div>
                     <ul class="list-group list-group-flush">
                         <li class="list-group-item social-icons">
-                            <a href="www.github.com/rifatrahvali">
+                            <a href="http://www.github.com/rifatrahvali">
                                 @rifatrahvali |
                                 <i class="bi bi-github"></i>
                                 <i class="bi bi-instagram"></i>
@@ -39,7 +39,7 @@
                     </ul>
                     <div class="card-body">
                         <div class="social-icons">
-                            <a href="#" class="card-link">
+                            <a href="mailto:info@rahvali.dev" class="card-link">
                                 info@rahvali.dev |
                                 <i class="bi bi-envelope"></i>
                             </a>
@@ -47,7 +47,7 @@
                     </div>
                 </div>
 
-                <div class="card text-center mt-3" style="width: 18rem; border-radius: 0; border: 2px solid black; ">
+                <div class="card text-center mt-3" style="width: 100%; border-radius: 0; border: 2px solid black;">
                     <div class="card-body">
                         <h5 class="card-title">Hakkımda</h5>
                         <p class="card-text">
@@ -58,128 +58,141 @@
                         <p class="card-text">
                             Kariyerimi yazılım alanında devam ettirmek istediğimden dolayı web geliştirme alanında çalışmalar yapmaktayım.
                         </p>
-
                     </div>
                 </div>
             </section>
 
-            <section class="col-md-4 right-align" style="border-left: 2px solid black;">
+            <section class="col-md-8">
 
-                <div class="card text-end" style="border-radius: 0; border: 2px solid black;">
-                    <div class="card-body">
-                        <h3 class="card-title">Deneyim</h3>
-                        <p class="card-text">
-                            <b>Ağaoğlu Şirketler Grubu</b> <br>
-                            2020-2024 <br>
-                            <small class="text-muted">Uzman</small>
-                        </p>
+                <div class="row">
+                    <div class="col-md-6 mb-3">
+                        <div class="card text-end" style="border-radius: 0; border: 2px solid black;">
+                            <div class="card-body">
+                                <h3 class="card-title">Deneyim</h3>
+                                <p class="card-text">
+                                    <b>Ağaoğlu Şirketler Grubu</b> <br>
+                                    2020-2024 <br>
+                                    <small class="text-muted">Uzman</small>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 mb-3">
+                        <div class="card" style="border-radius: 0; border: 2px solid black;">
+                            <div class="card-body">
+                                <h3 class="card-title">Öğrenim</h3>
+                                <p class="card-text">
+                                    <b>Kurumsal IT Yapısı</b>
+                                </p>
+                                <p class="card-text">
+                                    <b>Network</b> | Kurulum & Yönetim <br>
+                                    <small class="text-muted">Forti - Juniper </small>
+                                </p>
+                                <p class="card-text">
+                                    <b>Sistem</b> | Kurulum & Yönetim <br>
+                                    <small class="text-muted">Active Directory - File Server - Domain </small>
+                                </p>
+                                <p class="card-text">
+                                    <b>Microsoft 365 Admin Center</b> | Yönetim <br>
+                                    <small class="text-muted">Kullanıcılar & Gruplar - Email - Defender</small>
+                                </p>
+                                <p class="card-text">
+                                    <b>Yazılım</b> | Destek <br>
+                                    <small class="text-muted">Dynamics CRM - Navision - LOGO</small>
+                                </p>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <div class="card text-end" style="border-radius: 0; border: 2px solid black; margin-top: 85%;">
-                    <div class="card-body">
-                        <h3 class="card-title">Eğitim</h3>
-                        <p class="card-text">
-                            Mehmet Akif Ersoy EML | <b>Sakarya</b> <br>
-                            <small class="text-muted">2009 - 2012</small> | Web Programcılığı
-                        </p>
-                        <p class="card-text">
-                            Beykent Üniversitesi | <b>İstanbul</b> <br>
-                            <small class="text-muted">2015 - 2020</small> | Bilgisayar Mühendisliği
-                        </p>
+                <div class="row">
+                    <div class="col-md-6 mb-3">
+                        <div class="card text-end" style="border-radius: 0; border: 2px solid black;">
+                            <div class="card-body">
+                                <h3 class="card-title">Eğitim</h3>
+                                <p class="card-text">
+                                    Mehmet Akif Ersoy EML | <b>Sakarya</b> <br>
+                                    <small class="text-muted">2009 - 2012</small> | Web Programcılığı
+                                </p>
+                                <p class="card-text">
+                                    Beykent Üniversitesi | <b>İstanbul</b> <br>
+                                    <small class="text-muted">2015 - 2020</small> | Bilgisayar Mühendisliği
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 mb-3">
+                        <div class="card" style="border-radius: 0; border: 2px solid black;">
+                            <div class="card-body">
+                                <h3 class="card-title">Öğrenim</h3>
+                                <p class="card-text">
+                                    <b>Lise</b> | Adobe Creative Cloud<br>
+                                    <small class="text-muted">HTML - CSS - PHP - C#</small> 
+                                </p>
+                                <p class="card-text">
+                                    <b>Üniversite</b> | Network & Yazılım<br>
+                                    <small class="text-muted">Ağ Temelleri - Algoritma - C++ - Java - Veritabanı İşlemleri - Android - Firebase</small> 
+                                </p>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <div class="card text-end mt-5" style="border-radius: 0; border: 2px solid black;">
-                    <div class="card-body">
-                        <h3 class="card-title">Kurs</h3>
+                <div class="row">
+                    <div class="col-md-6 mb-3">
+                        <div class="card text-end" style="border-radius: 0; border: 2px solid black;">
+                            <div class="card-body">
+                                <h3 class="card-title">Kurs</h3>
 
-                        <p class="card-text">
-                            <b>İnligizce</b> <br>
-                            Beykent Üniversitesi <br>
-                            <small class="text-muted">B1 Seviye</small>
-                        </p>
-                        <p class="card-text">
-                            <b>Full Stack Developer</b> <br>
-                            Udemy <br>
-                            <small class="text-muted">HTML - CSS - JavaScript - NODEJS</small>
-                        </p>
-                        <p class="card-text">
-                            <b>IOS14 - Swift5 : Başlangıçtan İleri Seviye Mobil Uygulama</b> <br>
-                            Udemy <br>
-                            <small class="text-muted">Swift - Swift UI - Firebase - GIT - API - JSON</small>
-                        </p>
+                                <p class="card-text">
+                                    <b>İnligizce</b> <br>
+                                    Beykent Üniversitesi <br>
+                                    <small class="text-muted">B1 Seviye</small>
+                                </p>
+                                <p class="card-text">
+                                    <b>Full Stack Developer</b> <br>
+                                    Udemy <br>
+                                    <small class="text-muted">HTML - CSS - JavaScript - NODEJS</small>
+                                </p>
+                                <p class="card-text">
+                                    <b>IOS14 - Swift5 : Başlangıçtan İleri Seviye Mobil Uygulama</b> <br>
+                                    Udemy <br>
+                                    <small class="text-muted">Swift - Swift UI - Firebase - GIT - API - JSON</small>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 mb-3">
+                        <div class="card" style="border-radius: 0; border: 2px solid black;">
+                            <div class="card-body">
+                                <h3 class="card-title">Sertifika</h3>
+                                <p class="card-text">
+                                    <b>ISO 27001:2022</b> | INTERNAL AUDITOR <br>
+                                    <small class="text-muted">SISBEL</small>
+                                </p>
+                                <p class="card-text">
+                                    <b>GİRİŞ</b> | SİBER GÜVENLİK <br>
+                                    <small class="text-muted">BEYKENT ÜNİVERSİTESİ</small>
+                                </p>
+                                <p class="card-text">
+                                    <b>DJANGO</b> | PYTHON ILE BACKEND <br>
+                                    <small class="text-muted">ENSTITU ISMEK</small>
+                                </p>
+                                <p class="card-text">
+                                    <b>NETWORK TEMELLERI</b> | NETWORK <br>
+                                    <small class="text-muted">BTK AKADEMY</small>
+                                </p>
+                                <p class="card-text">
+                                    <b>FORTIGATE</b> | NETWORK <br>
+                                    <small class="text-muted">BTK AKADEMY</small>
+                                </p>
+                            </div>
+                        </div>
                     </div>
                 </div>
 
-            </section>
-            <section class="col-md-4" style="border-left: 2px solid black;">
-                <div class="card" style="border-radius: 0; border: 2px solid black;">
-                    <div class="card-body">
-                        <h3 class="card-title">Öğrenim</h3>
-                        <p class="card-text">
-                            <b>Kurumsal IT Yapısı</b>
-                        </p>
-                        <p class="card-text">
-                            <b>Network</b> | Kurulum & Yönetim & Destek <br>
-                            <small class="text-muted">Forti - Juniper </small>
-                        </p>
-                        <p class="card-text">
-                            <b>Sistem</b> | Kurulum & Yönetim & Destek<br>
-                            <small class="text-muted">Active Directory - File Server - Domain </small>
-                        </p>
-                        <p class="card-text">
-                            <b>Microsoft 365 Admin Center</b> | Yönetim <br>
-                            <small class="text-muted">Kullanıcılar & Gruplar - Email - Defender</small>
-                        </p>
-                        <p class="card-text">
-                            <b>Yazılım</b> | Destek <br>
-                            <small class="text-muted">Dynamics CRM - Navision - LOGO</small>
-                        </p>
-                    </div>
-                </div>
-
-                <div class="card" style="border-radius: 0; border: 2px solid black; margin-top: 5%;">
-                    <div class="card-body">
-                        <h3 class="card-title">Öğrenim</h3>
-                        <p class="card-text">
-                            <b>Lise</b> | Adobe Creative Cloud <br>
-                            <small class="text-muted">HTML - CSS - PHP - C# </small>
-                        </p>
-                        <p class="card-text">
-                            <b>Universite</b> | Network & Yazılım <br>
-                            <small class="text-muted">Algoritma - C++ - JAVA - Veritabanı - Android - Firebase</small>
-                        </p>
-                    </div>
-                </div>
-
-                <div class="card" style="border-radius: 0; border: 2px solid black; margin-top: 8%;">
-                    <div class="card-body">
-                        <h3 class="card-title">Sertifika</h3>
-                        <p class="card-text">
-                            <b>ISO 27001:2022</b> | INTERNAL AUDITOR <br>
-                            <small class="text-muted">SISBEL</small>
-                        </p>
-                        <p class="card-text">
-                            <b>GİRİŞ</b> | SİBER GÜVENLİK <br>
-                            <small class="text-muted">BEYKENT ÜNİVERSİTESİ</small>
-                        </p>
-                        <p class="card-text">
-                            <b>DJANGO</b> | PYTHON ILE BACKEND <br>
-                            <small class="text-muted">ENSTITU ISMEK</small>
-                        </p>
-                        <p class="card-text">
-                            <b>NETWORK TEMELLERI</b> | NETWORK <br>
-                            <small class="text-muted">BTK AKADEMY</small>
-                        </p>
-                        <p class="card-text">
-                            <b>FORTIGATE</b> | NETWORK <br>
-                            <small class="text-muted">BTK AKADEMY</small>
-                        </p>
-                    </div>
-                </div>
             </section>
         </div>
-        <div class="footer">
-            <div class="line"></div>
+        <div class="footer text-center my-3">
+            <div class="line mb-3"></div>
             <p><i class="bi bi-c-circle-fill"></i> Rıfat Rahvalı | 2024</p>
         </div>
     </div>
