--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
                     </ul>
                     <div class="card-body">
                         <div class="social-icons">
-                            <a href="mailto:info@rahvali.dev" class="card-link">
-                                info@rahvali.dev |
+                            <a href="mailto:rifatrahvali@outlook.com" class="card-link">
+                                rifatrahvali@outlook.com |
                                 <i class="bi bi-envelope"></i>
                             </a>
                         </div>
