--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     </div>
                     <ul class="list-group list-group-flush">
                         <li class="list-group-item social-icons">
-                            <a href="http://www.github.com/rifatrahvali">
+                            <a href="#">
                                 @rifatrahvali |
                                 <i class="bi bi-github"></i>
                                 <i class="bi bi-instagram"></i>
